<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Read Later On Owncloud</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="bookmarkTitleLabel">Title</string>
    <string name="bookmarkTitleHint">new bookmark title</string>
    <string name="bookmarkURLLabel">Bookmark URL</string>
    <string name="bookmarkURLHint">new bookmark url</string>
    <string name="bookmarkCategoriesLabel">Categories</string>
    <string name="bookmarkCategoriesHint">categories</string>
    <string name="bookmarkDescriptionLabel">Description</string>
    <string name="bookmarkDescriptionHint">description</string>
    <string name="saveBookmarkButtonText">save for later</string>
    <string name="owncloudURLLabel">Owncloud URL</string>
    <string name="owncloudURLHint">owncloud url</string>
    <string name="owncloudUserLabel">Owncloud user</string>
    <string name="owncloudUserHint">owncloud user</string>
    <string name="owncloudPasswordLabel">Owncloud password</string>
    <string name="owncloudPasswordHint">password</string>
    <string name="defaultCategoryLabel">Default category</string>
    <string name="defaultCategoryHint">default category</string>
    <string name="saveSettingsButtonText">save settings</string>
    <string name="savingBookmarkNotTitle">Saving bookmark</string>
    <string name="savingBookmarkNotText">Bookmark will be saved to owncloud…</string>
    <string name="badResponseTitle">Bad Response</string>
    <string name="savingBookmarkDoneNotText">Bookmark successfully saved</string>
    <string name="savingBookmarkErrorText">Error while saving bookmark</string>
    <string name="savingBookmarkBadResponseText">Could not interpret response from owncloud</string>
    <string name="title_activity_category_mapping">Categories</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_categories">Categories</string>
    <string name="urlPatternHint">URL pattern</string>
    <string name="mappingCategoriesHint">Categories</string>
    <string name="saveCategoryMappings">save mapping</string>
    <string name="buttonTextWhileSaving">saving…</string>
    <string name="clearBookmarkButton">clear</string>
    <string name="enableNotificationsCheckBox">enable notifications</string>

</resources>
