<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.plastickarma.readlater.app.CreateBookmarkActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:id="@+id/bookmarkTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmarkTitleLabel"/>

        <EditText
            android:id="@+id/bookmarkTitleInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/bookmarkTitle"
            android:layout_marginTop="5dp"
            android:hint="@string/bookmarkTitleHint"
            android:inputType="text"/>

        <TextView
            android:id="@+id/bookmarkURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookmarkTitleInput"
            android:layout_marginTop="10dp"
            android:text="@string/bookmarkURLLabel"/>

        <EditText
            android:id="@+id/bookmarkURLInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/bookmarkURL"
            android:layout_marginTop="5dp"
            android:hint="@string/bookmarkURLHint"
            android:inputType="textUri"/>

        <TextView
            android:id="@+id/bookmarkCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookmarkURLInput"
            android:layout_marginTop="10dp"
            android:text="@string/bookmarkCategoriesLabel"/>

        <EditText
            android:id="@+id/bookmarkCategoriesInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/bookmarkCategories"
            android:layout_marginTop="5dp"
            android:hint="@string/bookmarkCategoriesHint"
            android:inputType="text"/>

        <TextView
            android:id="@+id/bookmarkDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookmarkCategoriesInput"
            android:layout_marginTop="10dp"
            android:text="@string/bookmarkDescriptionLabel"/>

        <EditText
            android:id="@+id/bookmarkDescriptionInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/bookmarkDescription"
            android:layout_marginTop="5dp"
            android:hint="@string/bookmarkDescriptionHint"
            android:inputType="text"/>

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/bookmarkDescriptionInput"
            android:text="@string/clearBookmarkButton"/>

    </RelativeLayout>
</ScrollView>
