<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.plastickarma.readlater.app.Settings">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/owncloudURLTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owncloudURLLabel"/>

        <EditText
            android:id="@+id/owncloudURLTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/owncloudURLTitle"
            android:layout_marginTop="5dp"
            android:hint="@string/owncloudURLHint"
            android:inputType="textUri"/>

        <TextView
            android:id="@+id/owncloudUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/owncloudURLTextInput"
            android:layout_marginTop="10dp"
            android:text="@string/owncloudUserLabel"/>

        <EditText
            android:id="@+id/owncloudUserTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/owncloudUser"
            android:layout_marginTop="5dp"
            android:hint="@string/owncloudUserHint"
            android:inputType="text"/>

        <TextView
            android:id="@+id/owncloudPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/owncloudUserTextInput"
            android:layout_marginTop="10dp"
            android:text="@string/owncloudPasswordLabel"/>

        <EditText
            android:id="@+id/owncloudPasswordTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/owncloudPassword"
            android:layout_marginTop="5dp"
            android:hint="@string/owncloudPasswordHint"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/owncloudDefaultCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/owncloudPasswordTextInput"
            android:layout_marginTop="10dp"
            android:text="@string/defaultCategoryLabel"/>

        <EditText
            android:id="@+id/owncloudDefaultCategoryTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/owncloudDefaultCategory"
            android:layout_marginTop="5dp"
            android:hint="@string/defaultCategoryHint"
            android:inputType="text"/>

        <CheckBox
            android:id="@+id/enableNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/owncloudDefaultCategoryTextInput"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/enableNotificationsCheckBox"
            android:textSize="18sp"/>
    </RelativeLayout>

</ScrollView>
