<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.plastickarma.readlater.app.CategoryMappingDetailFragment">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/urlPatternHint"
        android:id="@+id/bookmarkPattern"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mappingCategories"
        android:hint="@string/mappingCategoriesHint"
        android:layout_below="@+id/bookmarkPattern"
        android:inputType="text"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveCategoryMappings"
        android:id="@+id/saveMappingButton"
        android:layout_marginTop="10dp"
        android:layout_below="@id/mappingCategories"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
